--- a/src/LoginPage.css
+++ b/src/LoginPage.css
@@ -1,13 +1,13 @@
 /* LoginPage.css */
 
 .container {
-    background-color: #40ffdc;
+   
     justify-content: center;
     align-items: center;
-    height: 100vh;
   }
   
   .form {
+    background: #40ffdc;
     flex-direction: column;
     align-items: center;
     background-color: white;
