--- a/src/LoginPage.css
+++ b/src/LoginPage.css
@@ -1,15 +1,26 @@
 /* LoginPage.css */
 
 .container {
-   
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .form {
-    background: #40ffdc;
-    flex-direction: column;
-    align-items: center;
-    background-color: white;
-    border-radius: 10px;
-  }
+  background-color: #13c8b5;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: white;
+  padding: 30px;
+  border-radius: 10px;
+}
+
+.login{
+  flex-direction: column;
+}
+
+.logo{
+  width: 160px;
+}
