--- a/src/LoginPage.css
+++ b/src/LoginPage.css
@@ -6,6 +6,9 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
+  justify-content: space-around;
+  
+
 }
 
 .form {
@@ -14,13 +17,64 @@
   align-items: center;
   background-color: white;
   padding: 30px;
-  border-radius: 10px;
+  border-radius: 15px;
 }
 
 .login{
+  padding: 5px;
+  display: flex;
   flex-direction: column;
+  font-weight: bold;
 }
 
 .logo{
   width: 160px;
+}
+
+.button{
+  background-color: #13c8b5;
+  padding: 5px;
+  margin: 15px;
+  border-radius: 5px;
+  font-weight: bold;
+}
+
+.button:hover{
+  background-color: white;
+}
+
+.senha{
+  font-weight: bold;
+  padding: 20px;
+}
+
+.senha:hover{
+  color: #808080;
+}
+
+.conta{
+  display: flex;
+  align-items: center;
+  font-weight: bold;
+  padding: 30px;
+  justify-content: space-between;
+}
+
+.cadastrar{
+  padding: 5px;
+  margin: 15px;
+  border-radius: 5px;
+  font-weight: bold;
+}
+
+.cadastrar:hover{
+  background: #808080;
+  color: white;
+}
+
+.medico{
+  width: 300px;
+  bottom: 0;
+  position: fixed;
+  float: left;
 }
